[package]
name = "warp-reg"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
ureq = "2.10.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
